Bug 1036454 - Failing assertion when calling resetUserPrefs because of mutating hashtable, r=bsmedberg

--HG--
extra : rebase_source : 4452ce09ef4cdb3d4f4c31d3b97fe86574c6df56